fix align of qualification and services

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -548,6 +548,11 @@ img {
 }
 
 /* === Qualification === */
+.qualification {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .qualification__tabs {
   display: flex;
@@ -623,6 +628,11 @@ img {
 }
 
 /* ==Services== */
+.services {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .services__container {
   gap: 1.5rem;
